<resources>
    <string name="app_name">NMedia</string>
    <string name="NMediaString">Нетология. Меняем карьеру через образование</string>
    <string name="dateString">March 24 at 11:23 pm</string>
    <string name="description_post_menu" translatable="false">Post menu</string>
    <string name="content">Hello, this is the new Netology! Once upon a time, Netology began with online marketing intensives.
          Then there were courses in design, development, analytics and management.
          We grow ourselves and help students grow: from beginners to confident professionals.
          We believe that everyone already has a force that makes you want more, aim higher, run faster.
          Our mission is to help get on the path of growth and start a chain of change → http://netolo.gy/fyb</string>
    <string name="count_zero">10</string>
    <string name="description_post_avatar">Avatar</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="chooser_share_post">Поделиться постом</string>
    <string name="chooser_app">Выбирете приложение</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="description_post_save">Post save</string>
    <string name="add_post">Add post</string>
</resources>